attempt to fix bg on mobile 2

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 120vh;
   margin: 0;
   color: lightgray;
 }
